--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     <button type="button" id="grab">GRAB COLOURS!</button>
     <br>
 
+    <h6>Your custom logo:</h6>
 
     <div id="grab_out">
+      <h6>Hit GRAB to make your logo!</h6>
     </div>
 
     <h6>Data blob:  </h6>
@@ -37,7 +39,7 @@
     <button id="render">Render to PNG</button>
 
     <div class="guide">
-      RENDER TO PNG will screenshot your logo and put it below. You can save it by right clicking and choosine 'Save Image As..'. It's pretty crummy quality for now, but I'll use everyone's data blobs to make higher quality versions, which we can also use to print the sticker. 
+      RENDER TO PNG will screenshot your logo and put it below. You can save it by right clicking and choosine 'Save Image As..'. It's pretty crummy quality for now, but I'll use everyone's data blobs to make higher quality versions, which we can also use to print the sticker.
     </div>
 
     <div id="rend_out">
