--- a/index.html
+++ b/index.html
@@ -49,4 +49,6 @@
   <script src="./js/main.js"></script>
 </body>
 
+<img class="li_img" src="https://preview.ibb.co/bUWnVF/Screen_Shot_2017_07_10_at_11_48_29_pm.jpg" alt="">
+
 </html>
