--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button id="render">Render to PNG</button>
 
     <div class="guide">
-      RENDER TO PNG will screenshot your logo and put it below. You can save it by right clicking and choosine 'Save Image As..'. It's pretty crummy quality for now, but I'll use everyone's data blobs to make higher quality versions, which we can also use to print the sticker.
+      RENDER TO PNG will screenshot your logo and put it below. You can save it by right clicking and choosing 'Save Image As..'. It's just a low-res image for now, but I'll use everyone's data blobs to make higher quality versions, which we can also use to print the sticker.
     </div>
 
     <div id="rend_out">
@@ -47,8 +47,11 @@
 
   </div>
   <script src="./js/main.js"></script>
-</body>
 
 <img class="li_img" src="https://preview.ibb.co/bUWnVF/Screen_Shot_2017_07_10_at_11_48_29_pm.jpg" alt="">
+
+</body>
+
+
 
 </html>
