--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button id="render">Render to PNG</button>
 
     <div class="guide">
-      RENDER TO PNG will screenshot your logo and put it below. You can save it by right clicking and choosing 'Save Image As..'. It's just a low-res image for now, but I'll use everyone's data blobs to make higher quality versions, which we can also use to print the sticker.
+      RENDER TO PNG will screenshot your logo and put it below. You can save it by right clicking and choosing 'Save Image As..' It's just a low-res image for now, but I'll use everyone's data blobs to make higher quality versions, which we can also use to print the sticker.
     </div>
 
     <div id="rend_out">
